Phoenix-SDK-June-2008-RC1/SourceDir/Phoenix SDK June 2008/samples/Pascal/cpp/Test/Tests/ParseRange.baseline
ParseRange.p(8) error P2002: syntax error: token '3336402735171707160320 (out-of-range integer constant.)'.
ParseRange.p(9) error P2002: syntax error: token '3336402735171707160320.3336402735171707160320 (out-of-range real constant.)'.
Compiling...
ParseRange.p

ParseRange.p - 2 error(s), 0 warning(s).

